[gd_scene load_steps=2 format=3 uid="uid://daift07xjfewj"]

[ext_resource type="Script" uid="uid://bs623unvgtgjf" path="res://Scripts/StatusScreen.gd" id="1_lrekl"]

[node name="StatusScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lrekl")

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsPanel" type="PanelContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/StatsPanel"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/StatsPanel/VBoxContainer"]
layout_mode = 2
text = "角色属性"
horizontal_alignment = 1

[node name="StatsGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/StatsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="EquipmentPanel" type="PanelContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/EquipmentPanel"]
layout_mode = 2

[node name="EquipmentTitle" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/EquipmentPanel/VBoxContainer"]
layout_mode = 2
text = "装备"
horizontal_alignment = 1

[node name="EquipmentGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/LeftColumn/EquipmentPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="RightColumn" type="VBoxContainer" parent="MainPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryTitle" type="Label" parent="MainPanel/MarginContainer/HBoxContainer/RightColumn"]
layout_mode = 2
text = "背包"
horizontal_alignment = 1

[node name="InventoryGrid" type="GridContainer" parent="MainPanel/MarginContainer/HBoxContainer/RightColumn"]
layout_mode = 2
size_flags_vertical = 3
columns = 4
